# borg

./: .gitattributes  .gitignore  README.md
gazebo_models/models/cafeRoom/: model.config  model.sdf
gazebo_models/models/cherry_kitchen_wall/: model-1_3.sdf  model.nocol.sdf  model.sdf
gazebo_models/models/cherry_kitchen_wall (copy)/: model.config
gazebo_models/models/cherry_kitchen_wall (copy)/meshes/: cherry_kitchen_wall.dae  cherry_kitchen_wall_reflect.dae
gazebo_models/models/cherry_kitchen_wall/meshes/: cherry_kitchen_wall.dae  collision2.dae
gazebo_models/models/qr_box_paint1/: model.config  model.sdf
gazebo_models/models/qr_box_paint1/materials/scripts/: qr.material
gazebo_models/models/qr_box_paint2/: model.config  model.sdf
gazebo_models/models/qr_box_paint2/materials/scripts/: qr.material
gazebo_models/models/qr_box_paint3/: model.config  model.sdf
gazebo_models/models/qr_box_paint3/materials/scripts/: qr.material
gazebo_models/models/qr_box_paint4/: model.config  model.sdf
gazebo_models/models/qr_box_paint4/materials/scripts/: qr.material
gazebo_models/models/qr_box_paint5/: model.config  model.sdf
gazebo_models/models/qr_box_paint5/materials/scripts/: qr.material
gazebo_models/models/qr_box_stove/: model.config  model.sdf
gazebo_models/models/qr_box_stove/materials/scripts/: qr.material
latest_model/big_room/: checkpoint  model.ckpt.data-00000-of-00001  model.ckpt.index
latest_model/small_kitchen/: checkpoint  model.ckpt.data-00000-of-00001  model.ckpt.index
map/: .gitignore  README.txt  alice_code.py  code.py  codeCamera.py  code_sudo.py  data_gath_real.py  imageSub.py  kitchen.pgm  kitchen.yaml  kitchen_cnn_live.py  label.py  make_sets_angle.py  moveBarrel.py  resetAlice.py  shuffle_train.py  sim_map.pgm  sim_map.yaml  sim_map_mod.pgm  train_cnn_inception.py  xtationJoint.py  yiebo_model.py
ros/: .gitignore
ros/catkin_ws/src/alice_controller/: CMakeLists.txt
ros/catkin_ws/src/alice_description/urdf/: alice.urdf  alice.urdf.backup  alice.urdf.bck  alice_head.urdf.xacro  complete_model.urdf  complete_model.urdf.xacro  complete_model_bottom_part.urdf.xacro  complete_model_mico_arm.urdf.xacro  frames.gv  tempfile.urdf
ros/catkin_ws/src/alice_gazebo/launch/: 3_doors.launch  alice_no_collision.launch  alice_simulation.launch  complete_alice.launch  complete_alice_sim.launch  headControllerSimulation.py  micoarm.launch  nogui-simple.launch  nogui.launch  simple.launch  spawn_alice.launch  sudo.launch  sudolab.launch  test_robot.launch  tf.launch  tf_arm_only.launch  tf_gazebo.launch
ros/catkin_ws/src/alice_gazebo/worlds/: cafeRoom.world  caferoom_nocollision.world  dynamic.world  simplehouse.sdf  test.sdf  testWorld.sdf
ros/catkin_ws/src/alice_msgs/: CMakeLists.txt
ros/catkin_ws/src/alice_nav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ros/catkin_ws/src/alice_nav/launch/: alice_config.launch  alice_nav.launch  front_xtion.launch  voxel_grid.launch  xtions.launch
ros/catkin_ws/src/alice_nav_sim/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ros/catkin_ws/src/alice_nav_sim/launch/: alice_gmapping.launch  alice_laser.launch  alice_nav.launch  xtions.launch
ros/catkin_ws/src/alice_nav_sim/scripts/: benchmark.py
ros/catkin_ws/src/alice_teleop_keyboard/: package.xml
ros/catkin_ws/src/alice_teleop_keyboard/src/: teleop.cc
ros/catkin_ws/src/borg_2dnav/: CMakeLists.txt  package.xml
ros/catkin_ws/src/borg_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ros/catkin_ws/src/borg_2dnav/launch/: borg_global_navigation.launch  borg_global_navigation_cafe.launch  borg_local_navigation.launch  gmapping.launch  sudo_config.launch
ros/catkin_ws/src/borg_2dnav/maps/: arena4.yaml  borg_lab.pgm  borg_lab.yaml  borg_lab_simulation.pgm  borg_lab_simulation.yaml  cherry_kitchen.pgm  cherry_kitchen.yaml  sim_room.pgm  sim_room.yaml  simplehouse.yaml  testmap_corridor.pgm  testmap_corridor.yaml
ros/catkin_ws/src/borg_2dnav/n_config/: global_costmap_params.yaml  local_costmap_params.yaml
ros/catkin_ws/src/borg_pioneer/: CMakeLists.txt  package.xml
ros/catkin_ws/src/borg_pioneer/src/: speech_server.py  transform.cpp
ros/catkin_ws/src/cacla_nav/: CMakeLists.txt  README.txt  instructions.odt  package.xml  package.xml.orig
ros/catkin_ws/src/cacla_nav/goals_starts/: approx.npy  goal_0.npy  goal_order.npy  goals.npy  indeces.npy  maze_0.npy  starts.npy  (+1 more)
ros/catkin_ws/src/gazebo_controller/: CMakeLists.txt  package.xml
ros/catkin_ws/src/rl_methods/: CMakeLists.txt  package.xml  setup.py
ros/catkin_ws/src/robot_control/: CMakeLists.txt  package.xml
ros/catkin_ws/src/robot_control/action/: rl.action
ros/catkin_ws/src/robot_control/include/robot_control/: robotdriver.h
ros/catkin_ws/src/robot_control/src/: rlcontrol.cc  robotcontrol.cc
ros/catkin_ws/src/robot_control/src/robot_control/: driveforward.cc  jsonparser.cc  readaction.cc  robotdriver.cc  robotdriver.ih  robotdriver2.cc  stoprobot.cc  turnodom.cc
ros/catkin_ws/src/robot_control/srv/: action.srv
ros/catkin_ws/src/stage_nav/: CMakeLists.txt  package.xml
ros/catkin_ws/src/stage_ros-lunar-devel/: CMakeLists.txt  package.xml
ros/catkin_ws/src/sudo_description/: CMakeLists.txt  model.config  model.sdf  package.xml
ros/catkin_ws/src/sudo_gazebo/: CMakeLists.txt  package.xml
ros/catkin_ws/src/sudo_stage/: CMakeLists.txt  package.xml
ros/teleop_keyboard/: CMakeLists.txt  manifest.xml
ros/teleop_keyboard/include/teleop_keyboard/: teleop.h
ros/teleop_keyboard/src/: teleop.cc
ros/teleop_keyboard/src/teleop/: constructor.cc  run.cc
ros/volksbot_driver/launch/: volksbot.launch
ros/volksbot_driver/src/: volksbot_node.cpp
ros/volksbot_driver/urdf/: volksbot.urdf.xacro
theano_config/: install_dependencies.sh
(+201 files in other folders)
